# mkdocs-source-links

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO1.1.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.cursor/skills/commit-and-pr-workflow/: SKILL.md
.cursor/skills/github-issue-workflow/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: check-dco.sh  create-github-release.sh  verify-release-tag.sh  verify-tag-version.sh
.github/workflows/: ci.yml  codeql.yml  dco.yml  docs.yml  publish.yml  scorecards.yml
docs/: api.md  changelog.md  code-of-conduct.md  configuration.md  contributing.md  forges.md  governance.md  index.md  limitations.md  recipes.md  roadmap.md  security.md  support.md  usage.md
docs/snippets/: branch_resolution.md  link_conventions_table.md
scripts/: release.py
src/mkdocs_source_links/: __init__.py  _fences.py  _paths.py  _scan.py  anchors.py  branch.py  plugin.py  ref.py  rewrite.py  urls.py
tests/: conftest.py  git_utils.py  test_anchors.py  test_branch.py  test_create_github_release.py  test_init.py  test_integration.py  test_plugin.py  test_ref.py  test_release.py  test_rewrite.py  test_rewrite_anchors.py  test_rewrite_fences.py  test_rewrite_images.py  test_rewrite_inline_parser.py  test_rewrite_property.py  test_rewrite_references.py  test_shell_scripts.py  test_urls.py
