[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-source-links"
version = "0.1.0"
description = "MkDocs plugin: rewrite ../ repo links to forge view URLs in built HTML"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Filip Christiansen" }]
keywords = ["mkdocs", "plugin", "documentation", "links"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
]
dependencies = ["mkdocs>=1.5"]

[project.urls]
Homepage = "https://github.com/filipchristiansen/mkdocs-source-links"
Repository = "https://github.com/filipchristiansen/mkdocs-source-links"
Issues = "https://github.com/filipchristiansen/mkdocs-source-links/issues"

[project.entry-points."mkdocs.plugins"]
source-links = "mkdocs_source_links.plugin:SourceLinksPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_source_links"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
